Fix JobBoard and YourJobs overflow-x and emptystate image sizes

--- a/src/components/JOBS/JobBoard/EmptyStates.module.css
+++ b/src/components/JOBS/JobBoard/EmptyStates.module.css
@@ -36,20 +36,20 @@
 }
 
 .noJobImage {
+	max-height: 50vh;
 	max-width: 85vw;
-	min-width: 25vw;
 }
 
 .noJobTitle {
-	font-size: 2.5rem;
+	font-size: 4.5vmin;
 	color: #193f76;
 	margin: 0 1rem;
 	text-align: center;
 }
 
 .noJobOrg {
-	font-size: 1.2rem;
-	margin-top: 2rem;
+	font-size: 2vmin;
+	margin-top: 1rem;
 }
 .noJobButton {
 	margin-top: 1rem;
@@ -63,7 +63,7 @@
 	text-decoration: none;
 }
 .noJobButtonText {
-	font-size: 1.5rem;
+	font-size: 2.5vmin;
 	color: #f8f8f8;
 }
 .noJobButton:hover {
@@ -72,8 +72,23 @@
 	transition: 0.25s ease;
 	text-decoration: none;
 }
+
+@media screen and (max-width: 576px) {
+	.noJobTitle {
+		font-size: 2rem;
+	}
+
+	.noJobOrg {
+		font-size: 1rem;
+	}
+	.noJobButtonText {
+		font-size: 1.2rem;
+	}
+}
+
 /* filter no job  */
 .filterNoJobContainer {
+	width: 100%;
 	display: grid;
 	place-items: center;
 }
@@ -86,8 +101,8 @@
 }
 
 .filterNoJobImage {
+	max-height: 50vh;
 	max-width: 85vw;
-	min-width: 25vw;
 }
 
 .filterNoJobTitle {
