--- a/src/components/ORG/YourJobs/YourJobs.module.css
+++ b/src/components/ORG/YourJobs/YourJobs.module.css
@@ -1,32 +1,36 @@
 .container {
-  max-width: 76rem;
-  margin: 2rem auto;
+	max-width: 76rem;
+	margin: 2rem auto;
+}
+
+.rowContainer {
+	max-width: calc(100vw - 2px);
 }
 
 .filterContainer {
-  /* background-color: khaki; */
-  margin: 0 0 0 1rem;
-  height: 100%;
+	/* background-color: khaki; */
+	margin: 0 0 0 1rem;
+	height: 100%;
 }
 
 @media screen and (max-width: 992px) {
-  .filterContainer {
-    margin: 0 0 0 1rem;
-  }
+	.filterContainer {
+		margin: 0 0 0 1rem;
+	}
 }
 
 @media screen and (max-width: 768px) {
-  .container {
-    margin: 1rem auto;
-  }
-  .filterContainer {
-    margin: 0;
-  }
+	.container {
+		margin: 1rem auto;
+	}
+	.filterContainer {
+		margin: 0;
+	}
 }
 
 .emptyState {
-  height: 30em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	height: 30em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
