--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,17 @@
 html,
 body {
-  font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 1.42857143;
-  /* width: 100vw;
-  height: 100vh; */
-  margin: 0px;
-  padding: 0px;
-  /* overflow-x: hidden; */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+	font-size: 16px;
+	line-height: 1.42857143;
+	margin: 0px;
+	padding: 0px;
+	/* overflow-x: hidden; */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
